fixed scrollbar on load

--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 body {
-  text-align: center;
   font-family: 'Roboto', 'sans-serif';
   color: #777;
+}
+
+h1, h2 {
+  text-align: center;
+  position: fixed;
+  left: 0;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 h1 {
@@ -85,11 +93,13 @@ h2 {
 }
 
 .line1 {
+  top: 10px;
+  
   transform: translateX(50px);
   -moz-transform: translateX(50px);
   -webkit-transform: translateX(50px);
   opacity: 0;
-  
+
   animation-name: slide-left;
   animation-duration: 0.4s;
   animation-fill-mode: forwards;
@@ -99,11 +109,13 @@ h2 {
 }
 
 .line2 {
+  top: 70px;
+  
   transform: translateX(-50px);
   -moz-transform: translateX(-50px);
   -webkit-transform: translateX(-50px);
   opacity: 0;
-  
+
   animation-name: slide-right;
   animation-duration: 0.4s;
   animation-fill-mode: forwards;
@@ -115,11 +127,13 @@ h2 {
 }
 
 .line3 {
+  top: 108px;
+  
   transform: translateY(50px);
   -moz-transform: translateY(50px);
   -webkit-transform: translateY(50px);
   opacity: 0;
-  
+
   animation-name: slide-up;
   animation-duration: 0.4s;
   animation-fill-mode: forwards;
